# Imitaiton-Learning-for-cell-cultivation

./: .gitignore  README.md  demo.py  pyproject.toml  requirement.txt
BayesianDAG/: .gitignore  requirements.txt  setup.py
BayesianDAG/ml2_meta_causal_discovery/datasets/data/: .upload_dropbox.py.swp  upload_dropbox.py
BayesianDAG/ml2_meta_causal_discovery/experiments/causal_classification/: test_causal_classify.py  train_causal_classify.py
BayesianDAG/ml2_meta_causal_discovery/experiments/causal_classification/baseline_results/dibs/gplvm_20var_ER20_test/: gplvm_20var_ER20_test_seed0.json  gplvm_20var_ER20_test_seed1.json  gplvm_20var_ER20_test_seed10.json  gplvm_20var_ER20_test_seed11.json  gplvm_20var_ER20_test_seed12.json  gplvm_20var_ER20_test_seed13.json  gplvm_20var_ER20_test_seed14.json  gplvm_20var_ER20_test_seed15.json  gplvm_20var_ER20_test_seed16.json  gplvm_20var_ER20_test_seed17.json  gplvm_20var_ER20_test_seed18.json  gplvm_20var_ER20_test_seed19.json  gplvm_20var_ER20_test_seed2.json  gplvm_20var_ER20_test_seed20.json  gplvm_20var_ER20_test_seed21.json  gplvm_20var_ER20_test_seed22.json  gplvm_20var_ER20_test_seed23.json  gplvm_20var_ER20_test_seed24.json  gplvm_20var_ER20_test_seed3.json  gplvm_20var_ER20_test_seed4.json  gplvm_20var_ER20_test_seed5.json  gplvm_20var_ER20_test_seed6.json  gplvm_20var_ER20_test_seed7.json  gplvm_20var_ER20_test_seed8.json  gplvm_20var_ER20_test_seed9.json
BayesianDAG/ml2_meta_causal_discovery/experiments/causal_classification/baseline_results/dibs/gplvm_20var_ER40_test/: gplvm_20var_ER40_test_seed0.json  gplvm_20var_ER40_test_seed1.json  gplvm_20var_ER40_test_seed10.json  gplvm_20var_ER40_test_seed11.json  gplvm_20var_ER40_test_seed12.json  gplvm_20var_ER40_test_seed13.json  gplvm_20var_ER40_test_seed14.json  gplvm_20var_ER40_test_seed15.json  gplvm_20var_ER40_test_seed16.json  gplvm_20var_ER40_test_seed17.json  gplvm_20var_ER40_test_seed18.json  gplvm_20var_ER40_test_seed19.json  gplvm_20var_ER40_test_seed2.json  gplvm_20var_ER40_test_seed20.json  gplvm_20var_ER40_test_seed21.json  gplvm_20var_ER40_test_seed22.json  gplvm_20var_ER40_test_seed23.json  gplvm_20var_ER40_test_seed24.json  gplvm_20var_ER40_test_seed3.json  gplvm_20var_ER40_test_seed4.json  gplvm_20var_ER40_test_seed5.json  gplvm_20var_ER40_test_seed6.json  gplvm_20var_ER40_test_seed7.json  gplvm_20var_ER40_test_seed8.json  gplvm_20var_ER40_test_seed9.json
BayesianDAG/ml2_meta_causal_discovery/experiments/causal_classification/baseline_results/dibs/gplvm_20var_ER60_test/: gplvm_20var_ER60_test_seed0.json  gplvm_20var_ER60_test_seed1.json  gplvm_20var_ER60_test_seed10.json  gplvm_20var_ER60_test_seed11.json  gplvm_20var_ER60_test_seed12.json  gplvm_20var_ER60_test_seed13.json  gplvm_20var_ER60_test_seed14.json  gplvm_20var_ER60_test_seed15.json  gplvm_20var_ER60_test_seed16.json  gplvm_20var_ER60_test_seed17.json  gplvm_20var_ER60_test_seed18.json  gplvm_20var_ER60_test_seed19.json  gplvm_20var_ER60_test_seed2.json  (+12 more)
BayesianDAG/ml2_meta_causal_discovery/experiments/causal_classification/finetuning/: run_finetuning.py
BayesianDAG/ml2_meta_causal_discovery/models/: causaltransformercomponents.py  causaltransformernp.py
BayesianDAG/ml2_meta_causal_discovery/utils/: args.py  metrics.py
MCPILCO/: environment.yaml  test_mcpilco_cartpole_variant_b.py  test_variant_b_one_step.py
MCPILCO/mcpilco_env/: pyvenv.cfg
MCPILCO/mcpilco_env/Scripts/: activate  activate.bat
MCPILCO/model_learning/: Model_learning.py
MCPILCO/pensim_wm/: analyze.py  bcnp_causal.py  buffer.py  build_causal_datasets.py  check_progress.py  collect_data.py  config.py  ingest_smpl.py  pretrain_bcnp_synthetic.py  scalers.py  train_world_model.py  world_model.py
MCPILCO/pensim_wm/analysis_out/: report.md
MCPILCO/pensim_wm/slurm/: pretrain_bcnp_d24.slurm
MCPILCO/pensim_wm/slurm/logs/: bcnp_d24_14303223.err  bcnp_d24_14303223.out  bcnp_d24_14303260.err  bcnp_d24_14303260.out  bcnp_d24_14303461.err  bcnp_d24_14303461.out  bcnp_d24_14303526.out  test_14302950.err
MCPILCO/policy_learning/: chance_constraint.py  gfn_prior.py  kl_cost.py  variant_b_cost.py
MCPILCO/simulation_class/: model.py
PenSimPy/pensimpy.egg-info/: PKG-INFO  SOURCES.txt
causal_out/: phase0_posterior_edge_prob.npy  phase1_posterior_edge_prob.npy  phase2_posterior_edge_prob.npy
datasets/data/synth_2var/: synth_2var_gplvm_11.hdf5  synth_2var_gplvm_14.hdf5  synth_2var_gplvm_17.hdf5  synth_2var_gplvm_2.hdf5  synth_2var_gplvm_5.hdf5  synth_2var_gplvm_8.hdf5  synth_2var_linear_1.hdf5  synth_2var_linear_10.hdf5  synth_2var_linear_13.hdf5  synth_2var_linear_16.hdf5  synth_2var_linear_19.hdf5  synth_2var_linear_4.hdf5  synth_2var_linear_7.hdf5  synth_2var_neuralnet_0.hdf5  synth_2var_neuralnet_12.hdf5  synth_2var_neuralnet_15.hdf5  synth_2var_neuralnet_18.hdf5  synth_2var_neuralnet_3.hdf5  synth_2var_neuralnet_6.hdf5  synth_2var_neuralnet_9.hdf5
fastodeint/pybind11/: CMakeLists.txt
fastodeint/pybind11/tests/: CMakeLists.txt
pretrained/: bcnp_24var.pt.meta.json  bcnp_24var.pt.progress.jsonl  bcnp_2var.pt.meta.json
sindy-rl/: README.md
sindy-rl/sindy_rl/: registry.py  reward_fns.py
sindy-rl/sindy_rl/config_templates/: dyna_pensim.yml
sindy-rl/sindy_rl/pensim/: env.py  ev  keig_sweep.py  normalize.py  run_dyna.py
virtual/: pyvenv.cfg
(+595 files in other folders)
