[tool.poetry]
name = "dissertation"
version = "0.1.0"
description = "Dissertation project: PenSim GP world model (MC-PILCO) + BCNP causal discovery + SINDy-RL"
authors = ["s2892016"]
readme = "README.md"
packages = [
    { include = "pensim_wm",       from = "MCPILCO" },
    { include = "model_learning",  from = "MCPILCO" },
    { include = "gpr_lib",         from = "MCPILCO" },
    { include = "policy_learning", from = "MCPILCO" },
    { include = "sindy_rl",        from = "sindy-rl" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

# --- core numerical / ML stack ---
numpy = ">=1.24,<2.0"
scipy = ">=1.8,<2.0"
pandas = ">=2.0,<3.0"
matplotlib = ">=3.7,<4.0"
torch = { version = ">=2.0,<3.0", source = "pytorch-cpu" }
torchvision = { version = ">=0.15,<1.0", source = "pytorch-cpu" }
scikit-learn = ">=1.2,<2.0"

# --- BCNP (BayesianDAG) runtime deps -- TF/gpflow are SHIMMED OUT, not installed ---
h5py = ">=3.8,<4.0"
python-igraph = ">=0.11,<1.0"
tqdm = ">=4.65,<5.0"
dill = ">=0.3.6,<1.0"
attrdict3 = ">=2.0,<3.0"

# --- smpl / mzutils transitive need ---
hashfile = ">=1.0,<3.0"
gym = ">=0.26,<0.27"

# --- SINDy-RL stack ---
pysindy = ">=1.7,<2.0"
derivative = ">=0.6,<1.0"
gymnasium = "0.26.3"
ray = { version = "2.6.3", extras = ["rllib", "tune"] }
dm-control = ">=1.0.9,<2.0"
pyyaml = ">=6.0,<7.0"
seaborn = ">=0.12,<1.0"

# --- local sibling packages ---
smpl = { path = "smpl", develop = true }
pensimpy = { path = "PenSimPy", develop = true }
fastodeint = { path = "fastodeint", develop = true }

# --- optional extras (only for MC-PILCO's MuJoCo/UR5 demos) ---
mujoco-py = { version = ">=2.0,<2.2", optional = true }

[tool.poetry.extras]
mujoco = ["mujoco-py"]

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<9.0"

[build-system]
requires = ["poetry-core>=1.5,<2.0"]
build-backend = "poetry.core.masonry.api"
